[fix]toc overflow

--- a/themes/maupassant/source/css/donate.css
+++ b/themes/maupassant/source/css/donate.css
@@ -136,7 +136,7 @@ a{
 	border-radius: 6px;
 	box-shadow: 0px 2px 7px rgba(0,0,0,0.3);
     opacity: 0;
-	transition: all 1s ease-in-out;
+	transition: all 0.2s ease-in-out;
 	transform-style: preserve-3d;
     transform-origin: center center;
     overflow: hidden;
